// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpenseList from expensesDummy 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={225}
      createdAt={0}
      description="coffee"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={100000}
      createdAt={-345600000}
      description="rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={5000}
      createdAt={345600000}
      description="groceries"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`render ExpenseList with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        There are no expenses.
      </span>
    </div>
  </div>
</div>
`;
